fixed spacing on the side and alignment issues

--- a/sprint-1/stylesheets/partials/_mixins.scss
+++ b/sprint-1/stylesheets/partials/_mixins.scss
@@ -178,7 +178,14 @@
 
         &__item {
             margin-right: 4%;
+
+            &:nth-of-type(1){
+                @include set-padding(0,0);
+            }
         }
+
+        
+
     }
 }
 
